--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest flake8 pyinstaller
+          pip install -r requirements.txt
 
       - name: Run flake8 style checks
         run: flake8 src/ --max-line-length=120
