--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,32 +37,47 @@ jobs:
       - name: Run flake8 style checks
         run: flake8 src/ --max-line-length=120
 
-      - name: Run tests with virtual display
+      - name: Run tests
         run: pytest tests/
 
       - name: Build with PyInstaller
-        run: pyinstaller src/main.py --onefile --windowed --icon=src/favicon.ico --name ClipperTool
+        run: |
+          pyinstaller ^
+            --onefile ^
+            --windowed ^
+            --icon=src/favicon.ico ^
+            --add-data "src/favicon.ico;." ^
+            --name ClipperTool ^
+            src/main.py
 
-      - name: Archive build
+      - name: Archive .exe into .zip
         run: |
           mkdir dist_upload
           cp dist/ClipperTool.exe dist_upload/
           Compress-Archive -Path dist_upload/* -DestinationPath ClipperTool.zip
 
-      - name: Get next version
+      - name: Generate and push next version tag
         id: version
+        shell: bash
         run: |
-          # Get the latest tag, or start with v1.0.0 if no tags exist
-          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          git fetch --tags
+          latest_tag=$(git tag --sort=-v:refname | head -n1)
+          if [[ -z "$latest_tag" ]]; then
+            latest_tag="v0.0.0"
+          fi
           echo "Latest tag: $latest_tag"
-          
-          # Extract version number and increment patch version
+
           version=${latest_tag#v}
           IFS='.' read -r major minor patch <<< "$version"
           new_patch=$((patch + 1))
           new_version="v$major.$minor.$new_patch"
-          
+
           echo "New version: $new_version"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git tag "$new_version"
+          git push origin "$new_version"
+
           echo "version=$new_version" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
@@ -72,16 +87,13 @@ jobs:
           name: ClipperTool ${{ steps.version.outputs.version }}
           body: |
             ## ClipperTool Release ${{ steps.version.outputs.version }}
-            
+
             Auto-generated release from push to `main`.
-            
-            **Changes:**
-            - Latest updates from commit ${{ github.sha }}
-            
-            **Download:**
-            - Extract `ClipperTool.zip` to get the `ClipperTool.exe` executable
-            
+
             **Commit:** ${{ github.sha }}
+
+            **Download ClipperTool.exe:**  
+            Extract from `ClipperTool.zip`
           files: ClipperTool.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
