--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,8 @@ jobs:
         run: flake8 src/ --max-line-length=120
 
       - name: Run tests
+        env:
+          PYTHONPATH: .
         run: pytest tests/
 
       - name: Build with PyInstaller
