--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Run tests
         env:
           PYTHONPATH: .
+          CI: true
         run: pytest tests/
 
       - name: Build with PyInstaller
